DefyParts: Fix some lint warnings